fix overflow and height

--- a/data/public/assets/css/jquery.mobile.structure-1.4.3.css
+++ b/data/public/assets/css/jquery.mobile.structure-1.4.3.css
@@ -13,7 +13,7 @@
 /* Some unsets */
 .ui-mobile,
 .ui-mobile body {
-	height: 99.9%;
+	/*height: 99.9%;*/
 }
 .ui-mobile fieldset,
 .ui-page {
