--- a/data/public/assets/sass/project/_project-styles.scss
+++ b/data/public/assets/sass/project/_project-styles.scss
@@ -1,3 +1,7 @@
+body {
+	overflow: hidden;
+}
+
 .button-styles {
 	@extend .proxima-regular;
 	font-size: 25px;
